--- a/admin.html
+++ b/admin.html
@@ -34,6 +34,7 @@
     </style>
 </head>
 <body>
+
     <div id="auth-screen" style="position:fixed; inset:0; background:var(--bg); z-index:10000; display:flex; align-items:center; justify-content:center;">
         <div class="card" style="width:300px; text-align:center;">
             <h2 style="justify-content:center; margin-bottom:15px;">Admin Login</h2>
@@ -87,7 +88,6 @@
 
                 <div class="card">
                     <h2>⏱️ Attendance Drill-Down</h2>
-                    <button class="btn-blue" style="margin-bottom:10px; background:var(--green)" onclick="downloadUsageCSV()">📊 Download CSV Report</button>
                     <div id="view-colleges"><div id="college-list-area" class="scroll-area"></div></div>
                     <div id="view-students" class="hidden"><div class="breadcrumb" onclick="showCollegesNav()">← Back to Colleges</div><div id="student-list-area" class="scroll-area"></div></div>
                     <div id="view-details" class="hidden">
@@ -97,6 +97,7 @@
                             <div id="sum-usage">Usage: <b>0s</b></div>
                             <div id="sum-read">Read: <b>0s</b></div>
                         </div>
+                        <button class="btn-blue" style="margin-bottom:10px; background:var(--green); font-size:10px;" onclick="downloadStudentCSV()">📊 Download This Student's Logs</button>
                         <div class="scroll-area" id="det-logs" style="font-size:10px;"></div>
                     </div>
                 </div>
@@ -113,7 +114,7 @@
         const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
         firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
 
-        let loggedInRole = ""; let loggedInCollege = ""; let collegeList = []; let allUsers = [];
+        let loggedInRole = ""; let loggedInCollege = ""; let collegeList = []; let allUsers = []; let selectedCollege = ""; let currentLogs = []; let currentStudentName = "";
 
         async function checkAuth() {
             const role = document.getElementById('admin-role-select').value, id = document.getElementById('admin-id').value, pass = document.getElementById('admin-pass').value;
@@ -130,7 +131,6 @@
             if(loggedInRole === 'college') {
                 document.getElementById('portal-title').innerText = "Admin: " + loggedInCollege;
                 document.getElementById('inventory-card').classList.add('hidden');
-                document.getElementById('m-coll-new').classList.add('hidden');
             }
             loadColleges(); loadBooks(); loadInbox(); loadAttendance();
         }
@@ -141,8 +141,7 @@
                 snap.forEach(doc => { if(doc.data().collegeId) colls.add(doc.data().collegeId); });
                 collegeList = Array.from(colls);
                 const select = document.getElementById('m-coll-select'), multi = document.getElementById('b-colls-list');
-                select.innerHTML = `<option value="">Select College</option>`;
-                multi.innerHTML = "";
+                select.innerHTML = `<option value="">Select College</option>`; multi.innerHTML = "";
                 collegeList.forEach(c => {
                     select.innerHTML += `<option value="${c}">${c}</option>`;
                     multi.innerHTML += `<div class="multi-option"><input type="checkbox" name="target-colls" value="${c}"><span>${c}</span></div>`;
@@ -151,8 +150,7 @@
         }
 
         async function addBook() {
-            const title = document.getElementById('b-title').value, id = document.getElementById('b-id').value;
-            const cat = document.getElementById('b-cat').value, lang = document.getElementById('b-lang').value;
+            const title = document.getElementById('b-title').value, id = document.getElementById('b-id').value, cat = document.getElementById('b-cat').value, lang = document.getElementById('b-lang').value;
             const selectedColls = Array.from(document.querySelectorAll('input[name="target-colls"]:checked')).map(cb => cb.value);
             if(!title || !id || selectedColls.length === 0) return alert("Fill all info!");
             await db.collection("library_settings").doc(id).set({ title, category: cat, language: lang, allowedColleges: selectedColls, recent: true, promoted: false });
@@ -163,32 +161,8 @@
             db.collection("library_settings").onSnapshot(snap => {
                 const list = document.getElementById('book-list'); list.innerHTML = "";
                 snap.forEach(doc => {
-                    const b = doc.data(); const id = doc.id;
-                    list.innerHTML += `
-                    <div class="list-item">
-                        <div style="display:flex; justify-content:space-between; align-items:start;">
-                            <b>${b.title}</b>
-                            <button class="btn-red" onclick="deleteBook('${id}')">Del</button>
-                        </div>
-                        <div class="control-row">
-                            <select class="tiny-select" onchange="updateBook('${id}','language',this.value)">
-                                <option value="English" ${b.language=='English'?'selected':''}>English</option>
-                                <option value="Tamil" ${b.language=='Tamil'?'selected':''}>Tamil</option>
-                                <option value="Malayalam" ${b.language=='Malayalam'?'selected':''}>Malayalam</option>
-                            </select>
-                            <select class="tiny-select" onchange="updateBook('${id}','category',this.value)">
-                                <option value="Theology" ${b.category=='Theology'?'selected':''}>Theology</option>
-                                <option value="Acts" ${b.category=='Acts'?'selected':''}>Acts</option>
-                                <option value="Ethics" ${b.category=='Ethics'?'selected':''}>Ethics</option>
-                                <option value="Mission" ${b.category=='Mission'?'selected':''}>Mission</option>
-                                <option value="Church History" ${b.category=='Church History'?'selected':''}>History</option>
-                                <option value="Bible Intro" ${b.category=='Bible Intro'?'selected':''}>Intro</option>
-                                <option value="Other Books" ${b.category=='Other Books'?'selected':''}>Other</option>
-                            </select>
-                            <button class="btn-action ${b.promoted?'active':''}" onclick="updateBook('${id}','promoted',${!b.promoted})">Promo</button>
-                            <input type="text" class="tiny-select" style="width:70px" value="${b.allowedColleges.join(',')}" onchange="updateBook('${id}','allowedColleges',this.value.split(','))">
-                        </div>
-                    </div>`;
+                    const b = doc.data(), id = doc.id;
+                    list.innerHTML += `<div class="list-item"><div style="display:flex; justify-content:space-between;"><b>${b.title}</b><button class="btn-red" onclick="deleteBook('${id}')">Del</button></div><div class="control-row"><select class="tiny-select" onchange="updateBook('${id}','language',this.value)"><option value="English" ${b.language=='English'?'selected':''}>English</option><option value="Tamil" ${b.language=='Tamil'?'selected':''}>Tamil</option><option value="Malayalam" ${b.language=='Malayalam'?'selected':''}>Malayalam</option></select><select class="tiny-select" onchange="updateBook('${id}','category',this.value)"><option value="Theology" ${b.category=='Theology'?'selected':''}>Theology</option><option value="Acts" ${b.category=='Acts'?'selected':''}>Acts</option><option value="Ethics" ${b.category=='Ethics'?'selected':''}>Ethics</option><option value="Mission" ${b.category=='Mission'?'selected':''}>Mission</option><option value="Church History" ${b.category=='Church History'?'selected':''}>History</option><option value="Bible Intro" ${b.category=='Bible Intro'?'selected':''}>Intro</option></select><button class="btn-action ${b.promoted?'active':''}" onclick="updateBook('${id}','promoted',${!b.promoted})">Promo</button><input type="text" class="tiny-select" style="width:70px" value="${b.allowedColleges.join(',')}" onchange="updateBook('${id}','allowedColleges',this.value.split(','))"></div></div>`;
                 });
             });
         }
@@ -196,8 +170,7 @@
         async function deleteBook(id) { if(confirm("Delete book?")) await db.collection("library_settings").doc(id).delete(); }
 
         async function addMember() {
-            const n = document.getElementById('m-name').value, c = document.getElementById('m-coll-new').value.toUpperCase() || document.getElementById('m-coll-select').value;
-            const i = document.getElementById('m-id').value, p = document.getElementById('m-pass').value, r = document.getElementById('m-role').value;
+            const n = document.getElementById('m-name').value, c = document.getElementById('m-coll-new').value.toUpperCase() || document.getElementById('m-coll-select').value, i = document.getElementById('m-id').value, p = document.getElementById('m-pass').value, r = document.getElementById('m-role').value;
             if(!n || !c || !i) return alert("Fill member info!");
             await db.collection("users").add({ fullName: n, collegeId: c, studentId: i, password: p, role: r, lastActive: Date.now() });
             alert("Registered!");
@@ -212,55 +185,46 @@
                     allUsers.push(u); colls.add(u.collegeId); 
                 });
                 const area = document.getElementById('college-list-area'); area.innerHTML = "";
-                if(loggedInRole === 'super') Array.from(colls).forEach(c => area.innerHTML += `<div class="list-item" onclick="showStudents('${c}')">📁 College: ${c}</div>`);
-                else showStudents(loggedInCollege);
+                if(loggedInRole === 'super') Array.from(colls).forEach(c => area.innerHTML += `<div class="list-item" onclick="showStudentsNav('${c}')">📁 College: ${c}</div>`);
+                else showStudentsNav(loggedInCollege);
             });
         }
 
-        function showStudents(c) {
-            document.getElementById('view-colleges').classList.add('hidden'); document.getElementById('view-students').classList.remove('hidden'); document.getElementById('view-details').classList.add('hidden');
+        function showStudentsNav(c) {
+            selectedCollege = c; document.getElementById('view-colleges').classList.add('hidden'); document.getElementById('view-students').classList.remove('hidden'); document.getElementById('view-details').classList.add('hidden');
             const area = document.getElementById('student-list-area'); area.innerHTML = "";
             allUsers.filter(u => u.collegeId === c && (u.role === 'student' || u.role === 'faculty')).forEach(u => area.innerHTML += `<div class="list-item" onclick="showDetails('${u.id}')">👤 ${u.fullName} (${u.studentId})</div>`);
         }
 
         async function showDetails(uid) {
-            const u = allUsers.find(x => x.id === uid);
-            if(!u) return;
+            const u = allUsers.find(x => x.id === uid); if(!u) return;
+            currentStudentName = u.fullName;
             document.getElementById('view-students').classList.add('hidden'); document.getElementById('view-details').classList.remove('hidden');
             document.getElementById('det-name').innerText = u.fullName;
+            const logArea = document.getElementById('det-logs'); logArea.innerHTML = "Loading logs...";
             
             db.collection("activity_logs").where("userId","==",uid).orderBy("startTime","desc").onSnapshot(snap => {
-                const area = document.getElementById('det-logs'); area.innerHTML = "";
-                let usage = 0; let readPrev = 0; let readFull = 0;
+                logArea.innerHTML = ""; currentLogs = []; let usage = 0; let readPrev = 0; let readFull = 0;
                 snap.forEach(doc => {
                     const l = doc.data(); const d = l.endTime ? Math.round((l.endTime - l.startTime)/1000) : 0;
+                    currentLogs.push({ ...l, duration: d });
                     if(l.type === "Usage") usage += d;
                     if(l.type === "Online Read") readPrev += d;
                     if(l.type === "Full Read") readFull += d;
-                    area.innerHTML += `<div style="padding:4px; border-bottom:1px solid #334155; display:flex; justify-content:space-between;"><span>${l.type}: ${l.activity}</span><span>${formatTime(d)}</span></div>`;
+                    logArea.innerHTML += `<div style="padding:4px; border-bottom:1px solid #334155; display:flex; justify-content:space-between;"><span>${l.type}: ${l.activity}</span><span>${formatTime(d)}</span></div>`;
                 });
                 document.getElementById('sum-usage').innerHTML = `Usage: <b>${formatTime(usage)}</b>`;
                 document.getElementById('sum-read').innerHTML = `Preview: <b>${formatTime(readPrev)}</b> | Full: <b>${formatTime(readFull)}</b>`;
             });
         }
 
-        async function downloadUsageCSV() {
-            const snap = await db.collection("activity_logs").get();
-            const logs = []; snap.forEach(doc => logs.push(doc.data()));
-            let csv = "Name,College,Role,Usage(s),Preview(s),FullRead(s)\n";
-            allUsers.forEach(u => {
-                let ut = 0, pt = 0, ft = 0;
-                logs.filter(l => l.userId === u.id).forEach(l => {
-                    const d = l.endTime ? (l.endTime - l.startTime)/1000 : 0;
-                    if(l.type === "Usage") ut += d;
-                    if(l.type === "Online Read") pt += d;
-                    if(l.type === "Full Read") ft += d;
-                });
-                csv += `${u.fullName},${u.collegeId},${u.role},${Math.round(ut)},${Math.round(pt)},${Math.round(ft)}\n`;
+        async function downloadStudentCSV() {
+            if(currentLogs.length === 0) return alert("No logs to download");
+            let csv = "Type,Activity,Start Time,End Time,Duration(s)\n";
+            currentLogs.forEach(l => {
+                csv += `${l.type},${l.activity},${new Date(l.startTime).toLocaleString()},${l.endTime ? new Date(l.endTime).toLocaleString() : 'Active'},${l.duration}\n`;
             });
-            const link = document.createElement("a");
-            link.href = "data:text/csv;charset=utf-8," + encodeURI(csv);
-            link.download = "TheoLib_Usage_Report.csv"; link.click();
+            const link = document.createElement("a"); link.href = "data:text/csv;charset=utf-8," + encodeURI(csv); link.download = `${currentStudentName}_TheoLib_Logs.csv`; link.click();
         }
 
         function formatTime(s) { const h = Math.floor(s/3600), m = Math.floor((s%3600)/60), sec = s%60; return `${h}h ${m}m ${sec}s`; }
