--- a/admin.html
+++ b/admin.html
@@ -13,14 +13,14 @@
         body { font-family: 'Poppins', sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 15px; }
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; align-items: start; }
         .card { background: var(--card); border-radius: 15px; padding: 20px; border: 1px solid var(--border); margin-bottom: 15px; }
-        h2 { color: var(--blue); margin-top: 0; font-size: 16px; display: flex; align-items: center; justify-content: space-between; gap: 8px; }
+        h2 { color: var(--blue); margin-top: 0; font-size: 16px; display: flex; align-items: center; justify-content: space-between; }
         input, select, textarea { width: 100%; padding: 8px; margin-bottom: 8px; border-radius: 8px; border: 1px solid var(--border); background: var(--bg); color: white; box-sizing: border-box; font-size: 12px; font-family: inherit; }
-        button { width: 100%; padding: 10px; border-radius: 10px; border: none; cursor: pointer; font-weight: 600; transition: 0.2s; font-family: inherit; }
+        button { width: 100%; padding: 10px; border-radius: 10px; border: none; cursor: pointer; font-weight: 600; font-family: inherit; }
         .btn-blue { background: var(--blue); color: white; }
         .btn-red { background: var(--red); color: white; width: auto; padding: 4px 8px; font-size: 10px; border-radius: 5px; }
         .btn-action { background: #334155; color: white; padding: 4px 8px; width: auto; font-size: 10px; border-radius: 5px; border: 1px solid var(--border); margin-right: 4px; }
         .btn-action.active { background: var(--green); border-color: var(--green); }
-        .list-item { background: #161e2e; padding: 12px; border-radius: 12px; margin-bottom: 10px; border: 1px solid var(--border); font-size: 12px; }
+        .list-item { background: #161e2e; padding: 12px; border-radius: 12px; margin-bottom: 10px; border: 1px solid var(--border); font-size: 12px; cursor: pointer; }
         .scroll-area { max-height: 450px; overflow-y: auto; padding-right: 5px; }
         .hidden { display: none !important; }
         .breadcrumb { font-size: 11px; color: var(--blue); margin-bottom: 10px; cursor: pointer; }
@@ -28,15 +28,15 @@
         .multi-option { display: flex; align-items: center; gap: 8px; font-size: 11px; margin-bottom: 4px; }
         .multi-option input { width: auto; margin: 0; }
         .control-row { display: flex; flex-wrap: wrap; gap: 5px; margin-top: 10px; align-items: center; }
-        .tiny-select { width: auto; padding: 2px 5px; font-size: 10px; margin-bottom: 0; background: #1e293b; }
-        .inbox-msg { border-left: 3px solid var(--orange); background: #161e2e; padding: 8px; margin-bottom: 8px; border-radius: 5px; font-size: 11px; position: relative; }
+        .tiny-select { width: auto; padding: 2px 5px; font-size: 10px; background: #1e293b; }
+        .inbox-msg { border-left: 3px solid var(--orange); background: #161e2e; padding: 10px; margin-bottom: 8px; border-radius: 5px; font-size: 11px; position: relative; }
         .msg-del { position: absolute; right: 8px; top: 8px; color: var(--red); cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
     <div id="auth-screen" style="position:fixed; inset:0; background:var(--bg); z-index:10000; display:flex; align-items:center; justify-content:center;">
         <div class="card" style="width:300px; text-align:center;">
-            <h2 style="justify-content:center; margin-bottom:15px;">Admin Login</h2>
+            <h2>Admin Access</h2>
             <select id="admin-role-select"><option value="super">Super Admin</option><option value="college">College Admin</option></select>
             <input type="text" id="admin-id" placeholder="Admin ID">
             <input type="password" id="admin-pass" placeholder="Password">
@@ -53,17 +53,18 @@
         <div class="grid">
             <div>
                 <div class="card" id="inventory-card">
-                    <h2>📚 Inventory Management</h2>
+                    <h2>📚 Add Global Book</h2>
                     <input type="text" id="b-title" placeholder="Book Title">
                     <input type="text" id="b-id" placeholder="Book ID (filename)">
                     <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px;">
-                        <select id="b-cat"><option value="Theology">Theology</option><option value="Acts">Acts of Apostles</option><option value="Ethics">Christian Ethics</option><option value="Church History">History</option><option value="Mission">Mission</option><option value="Bible Intro">Bible Intro</option><option value="Other Books">Other</option></select>
-                        <select id="b-lang"><option value="English">English</option><option value="Tamil">Tamil</option><option value="Malayalam">Malayalam</option><option value="Hindi">Hindi</option></select>
+                        <select id="b-cat"><option value="Theology">Theology</option><option value="Acts">Acts</option><option value="Ethics">Ethics</option><option value="Church History">History</option><option value="Mission">Mission</option><option value="Bible Intro">Bible Intro</option><option value="Other Books">Other</option></select>
+                        <select id="b-lang"><option value="English">English</option><option value="Tamil">Tamil</option><option value="Malayalam">Malayalam</option></select>
                     </div>
                     <label style="font-size: 10px; color: var(--blue);">Target Colleges:</label>
                     <div class="multi-select-box" id="b-colls-list"></div>
-                    <button class="btn-blue" onclick="addBook()">+ Add Book</button>
+                    <button class="btn-blue" onclick="addBook()">+ Register Book</button>
                 </div>
+
                 <div class="card" id="member-card">
                     <h2>👥 Member Management</h2>
                     <input type="text" id="m-name" placeholder="Full Name">
@@ -90,12 +91,20 @@
                             <div id="sum-usage">Usage: <b>0s</b></div>
                             <div id="sum-read">Read: <b>0s</b></div>
                         </div>
-                        <button class="btn-blue" style="margin-bottom:10px; background:var(--green); font-size:10px;" onclick="downloadStudentCSV()">📊 Download This Student's Logs</button>
+                        <button class="btn-blue" style="margin-bottom:10px; background:var(--green); font-size:10px;" onclick="downloadStudentCSV()">📊 Download Student Logs</button>
                         <div class="scroll-area" id="det-logs" style="font-size:10px;"></div>
                     </div>
                 </div>
-                <div class="card"><h2>📖 Inventory Controls</h2><div class="scroll-area" id="book-list"></div></div>
-                <div class="card"><h2>📥 Inbox</h2><div class="scroll-area" id="inbox-area"></div></div>
+
+                <div class="card">
+                    <h2>📖 Inventory Controls</h2>
+                    <div class="scroll-area" id="book-list"></div>
+                </div>
+
+                <div class="card">
+                    <h2>📥 Global Inbox</h2>
+                    <div class="scroll-area" id="inbox-area"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -106,46 +115,11 @@
 
         let loggedInRole = ""; let loggedInCollege = ""; let collegeList = []; let allUsers = []; let selectedCollege = ""; let currentLogs = []; let currentStudentName = "";
 
-        async function checkAuth() { 
-            const role = document.getElementById('admin-role-select').value, id = document.getElementById('admin-id').value, pass = document.getElementById('admin-pass').value; 
-            if(role === 'super' && id === 'admin' && pass === 'theo777') { loggedInRole = "super"; startApp(); } 
-            else if (role === 'college') {
-                const snap = await db.collection("users").where("studentId","==",id).where("password","==",pass).where("role","==","college_admin").get();
-                if(!snap.empty) { loggedInRole = "college"; loggedInCollege = snap.docs[0].data().collegeId; startApp(); }
-                else alert("Invalid Credentials");
-            } else alert("Login Failed");
-        }
-
+        async function checkAuth() { const role = document.getElementById('admin-role-select').value, id = document.getElementById('admin-id').value, pass = document.getElementById('admin-pass').value; if(role === 'super' && id === 'admin' && pass === 'theo777') { loggedInRole = "super"; startApp(); } else if (role === 'college') { const snap = await db.collection("users").where("studentId","==",id).where("password","==",pass).where("role","==","college_admin").get(); if(!snap.empty) { loggedInRole = "college"; loggedInCollege = snap.docs[0].data().collegeId; startApp(); } else alert("Invalid Credentials"); } else alert("Login Failed"); }
         function startApp() { document.getElementById('auth-screen').classList.add('hidden'); loadColleges(); loadBooks(); loadInbox(); loadAttendance(); }
-        
-        function loadColleges() {
-            db.collection("users").onSnapshot(snap => {
-                const colls = new Set();
-                snap.forEach(doc => { if(doc.data().collegeId) colls.add(doc.data().collegeId); });
-                collegeList = Array.from(colls);
-                const select = document.getElementById('m-coll-select'), multi = document.getElementById('b-colls-list');
-                select.innerHTML = `<option value="">Select College</option>`; multi.innerHTML = "";
-                collegeList.forEach(c => { select.innerHTML += `<option value="${c}">${c}</option>`; multi.innerHTML += `<div class="multi-option"><input type="checkbox" name="target-colls" value="${c}"><span>${c}</span></div>`; });
-            });
-        }
-
-        async function addBook() {
-            const title = document.getElementById('b-title').value, id = document.getElementById('b-id').value, cat = document.getElementById('b-cat').value, lang = document.getElementById('b-lang').value;
-            const selectedColls = Array.from(document.querySelectorAll('input[name="target-colls"]:checked')).map(cb => cb.value);
-            if(!title || !id || selectedColls.length === 0) return alert("Fill all info!");
-            await db.collection("library_settings").doc(id).set({ title, category: cat, language: lang, allowedColleges: selectedColls, recent: true, promoted: false });
-            alert("Book Registered!");
-        }
-
-        function loadBooks() {
-            db.collection("library_settings").onSnapshot(snap => {
-                const list = document.getElementById('book-list'); list.innerHTML = "";
-                snap.forEach(doc => {
-                    const b = doc.data(); const id = doc.id;
-                    list.innerHTML += `<div class="list-item"><div style="display:flex; justify-content:space-between;"><b>${b.title}</b> <button class="btn-red" onclick="deleteBook('${id}')">Del</button></div><div class="control-row"><select class="tiny-select" onchange="updateBook('${id}','language',this.value)"><option value="English" ${b.language=='English'?'selected':''}>English</option><option value="Tamil" ${b.language=='Tamil'?'selected':''}>Tamil</option><option value="Malayalam" ${b.language=='Malayalam'?'selected':''}>Malayalam</option></select><select class="tiny-select" onchange="updateBook('${id}','category',this.value)"><option value="Theology" ${b.category=='Theology'?'selected':''}>Theology</option><option value="Acts" ${b.category=='Acts'?'selected':''}>Acts</option><option value="Ethics" ${b.category=='Ethics'?'selected':''}>Ethics</option><option value="Mission" ${b.category=='Mission'?'selected':''}>Mission</option><option value="Church History" ${b.category=='Church History'?'selected':''}>History</option><option value="Bible Intro" ${b.category=='Bible Intro'?'selected':''}>Intro</option></select><button class="btn-action ${b.promoted?'active':''}" onclick="updateBook('${id}','promoted',${!b.promoted})">Promo</button><input type="text" class="tiny-select" style="width:70px" value="${b.allowedColleges.join(',')}" onchange="updateBook('${id}','allowedColleges',this.value.split(','))"></div></div>`;
-                });
-            });
-        }
+        function loadColleges() { db.collection("users").onSnapshot(snap => { const colls = new Set(); snap.forEach(doc => { if(doc.data().collegeId) colls.add(doc.data().collegeId); }); collegeList = Array.from(colls); const select = document.getElementById('m-coll-select'), multi = document.getElementById('b-colls-list'); select.innerHTML = `<option value="">Select College</option>`; multi.innerHTML = ""; collegeList.forEach(c => { select.innerHTML += `<option value="${c}">${c}</option>`; multi.innerHTML += `<div class="multi-option"><input type="checkbox" name="target-colls" value="${c}"><span>${c}</span></div>`; }); }); }
+        async function addBook() { const title = document.getElementById('b-title').value, id = document.getElementById('b-id').value, cat = document.getElementById('b-cat').value, lang = document.getElementById('b-lang').value; const selectedColls = Array.from(document.querySelectorAll('input[name="target-colls"]:checked')).map(cb => cb.value); if(!title || !id || selectedColls.length === 0) return alert("Fill all info!"); await db.collection("library_settings").doc(id).set({ title, category: cat, language: lang, allowedColleges: selectedColls, recent: true, promoted: false }); alert("Book Registered!"); }
+        function loadBooks() { db.collection("library_settings").onSnapshot(snap => { const list = document.getElementById('book-list'); list.innerHTML = ""; snap.forEach(doc => { const b = doc.data(); const id = doc.id; list.innerHTML += `<div class="list-item" style="cursor:default"><div style="display:flex; justify-content:space-between;"><b>${b.title}</b> <button class="btn-red" onclick="deleteBook('${id}')">Del</button></div><div class="control-row"><select class="tiny-select" onchange="updateBook('${id}','language',this.value)"><option value="English" ${b.language=='English'?'selected':''}>English</option><option value="Tamil" ${b.language=='Tamil'?'selected':''}>Tamil</option><option value="Malayalam" ${b.language=='Malayalam'?'selected':''}>Malayalam</option></select><select class="tiny-select" onchange="updateBook('${id}','category',this.value)"><option value="Theology" ${b.category=='Theology'?'selected':''}>Theology</option><option value="Acts" ${b.category=='Acts'?'selected':''}>Acts</option><option value="Ethics" ${b.category=='Ethics'?'selected':''}>Ethics</option><option value="Mission" ${b.category=='Mission'?'selected':''}>Mission</option><option value="Church History" ${b.category=='Church History'?'selected':''}>History</option><option value="Bible Intro" ${b.category=='Bible Intro'?'selected':''}>Intro</option></select><button class="btn-action ${b.promoted?'active':''}" onclick="updateBook('${id}','promoted',${!b.promoted})">Promo</button><input type="text" class="tiny-select" style="width:70px" value="${b.allowedColleges.join(',')}" onchange="updateBook('${id}','allowedColleges',this.value.split(','))"></div></div>`; }); }); }
         async function updateBook(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
         async function deleteBook(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
         async function addMember() { const n = document.getElementById('m-name').value, c = document.getElementById('m-coll-new').value.toUpperCase() || document.getElementById('m-coll-select').value, i = document.getElementById('m-id').value, p = document.getElementById('m-pass').value, r = document.getElementById('m-role').value; if(!n || !c || !i) return alert("Fill info!"); await db.collection("users").add({ fullName: n, collegeId: c, studentId: i, password: p, role: r, lastActive: Date.now() }); alert("Registered!"); }
@@ -153,11 +127,7 @@
         function loadAttendance() {
             db.collection("users").onSnapshot(snap => {
                 allUsers = []; const colls = new Set();
-                snap.forEach(doc => { 
-                    const u = {id: doc.id, ...doc.data()}; 
-                    if(loggedInRole === 'college' && u.collegeId !== loggedInCollege) return;
-                    allUsers.push(u); colls.add(u.collegeId); 
-                });
+                snap.forEach(doc => { const u = {id: doc.id, ...doc.data()}; if(loggedInRole === 'college' && u.collegeId !== loggedInCollege) return; allUsers.push(u); colls.add(u.collegeId); });
                 const area = document.getElementById('college-list-area'); area.innerHTML = "";
                 if(loggedInRole === 'super') Array.from(colls).forEach(c => area.innerHTML += `<div class="list-item" onclick="showStudentsNav('${c}')">📁 College: ${c}</div>`);
                 else showStudentsNav(loggedInCollege);
